# file-manipulator

./: .gitignore  Makefile  README.md  setup.cfg
manipulator/: __init__.py  __main__.py  config.py  file_processor.py
requirements/: pyproject.toml
src/: mutmut_config.py  setup.cfg
src/manipulator/: __main__.py  config.py  file_utils.py
src/requirements/: pyproject.toml
tests/: conftest.py  test_file_processor.py
