[tool.poetry]
name = "file-manipulator"
version = "0.1.0"
description = "An util for file manipulation"
authors = ["Darya Litvinchuk"]

[tool.poetry.dependencies]
python = "~3.8"

python-dotenv = "~0.17.1"
pydantic = "~1.7.2"

mypy = "~0.790"
flake8 = "~3.8.4"
flake8_polyfill = "~1.0.2"
isort = "~5.6.4"
black = "~20.8b1"
pytest = "~6.1.2"
pytest-cov = "~2.10.1"
pytest-factoryboy = "~2.0.3"
mock = "~4.0.2"

radon = "~4.3.2"
mutmut = "~2.1.0"

pip-licenses = "~3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
